# baxter-pose2movement

./: CMakeLists.txt  package.xml
src/: camera.py  coords2movement.py  coords_viz.py  pose2joint.py  random_movement.py
