<?xml version="1.0"?>
<package>
  <name>pose2movement</name>
  <version>1.0.0</version>
  <description>The my_catkin_package meta package</description>

  <license>GPLv3</license>
  <maintainer email="afdaniele@ttic.edu">Andrea F. Daniele</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
